Fix issues #13 and #14

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -25,6 +25,12 @@ users.registration.title=Nutzerregistrierung
 users.registration.userdata=Nutzerdaten
 users.registration.password=Passwort
 users.registration.submit=Registrieren
+users.service.KLUDGE= Flickschusterei
+users.service.SEWING = Nähservice
+users.service.LOCKSMITH = Schlüsseldienst
+users.service.CLEANING = Schnellreinigung
+users.service.ELECTRONICS = Elektrowerkstatt
+users.service.GRINDERY = Scherenschleiferei
 
 security.login = Anmelden
 security.logout = Abmelden
