--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -27,6 +27,12 @@ users.registration.title=User Registration
 users.registration.userdata=User Data
 users.registration.password=Password
 users.registration.submit=Submit
+users.service.KLUDGE= Kludge
+users.service.SEWING = Sewing
+users.service.LOCKSMITH = Locksmith
+users.service.CLEANING = Cleaning
+users.service.ELECTRONICS = Electronics
+users.service.GRINDERY = Grindery
 
 security.login = Login
 security.logout = Logout
