add time forward

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,6 +8,8 @@ general.actions = Actions
 general.details = Details
 general.print = Print
 general.price = Price
+general.current-time = The current time is {0}.
+general.forward = Forward
 
 index.pleaselogin = Please log in to use the management software.
 
