--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -6,6 +6,8 @@ general.actions = Aktionen
 general.details = Details
 general.print = Drucken
 general.price = Preis
+general.current-time = Die aktuelle Zeit ist {0}.
+general.forward = Vorspulen
 
 index.pleaselogin = Bitte melden Sie sich an, um die Management-Software zu nutzen.
 
