Add time and location to protocol

--- a/src/main/asciidoc/protocols/2019.11.22.adoc
+++ b/src/main/asciidoc/protocols/2019.11.22.adoc
@@ -2,9 +2,9 @@
 
 Treffen am 22.11.2019
 
-Ort:      Ort des Treffens +
-Beginn:   xx:xx Uhr +
-Ende:     xx:xx Uhr
+Ort:      APB vor Raum 1067 +
+Beginn:   15:00 Uhr + 
+Ende:     16:45 Uhr
 
 __Schriftführer:__
 Tobias Köllner
