show unavailable message

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -78,3 +78,4 @@ orders.pickup.compensation.request = Please give the customer a compensation of 
 orders.pickup.extra_costs.request = Please charge the customer {0}.
 orders.pickup.transaction = Transaction handled.
 orders.pickup.submit = Complete Order
+orders.receiving.unavailable = This service is currently unavailable.
