--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -75,4 +75,5 @@ orders.pickup.give_back = {0} an {1} zurückgeben
 orders.pickup.compensation.request = Bitte händigen Sie dem Kunden eine Entschädigung von {0} aus.
 orders.pickup.extra_costs.request = Bitte kassieren Sie noch {0}EUR
 orders.pickup.transaction = Transaktion vorgenommen.
-orders.pickup.submit = Complete Order
+orders.pickup.submit = Auftrag Abschließen
+orders.receiving.unavailable = Die Dienstleistung kann gerade nicht erbracht werden.
