Add translation for registration form

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -23,6 +23,9 @@ users.edit.save=Änderungen speichern
 users.edit.title=Nuzerbearbeitung
 users.registration.title=Nutzerregistrierung
 users.registration.userdata=Nutzerdaten
+users.registration.firstname=Vorname
+users.registration.lastname=Nachname
+users.registration.username=Benutzername
 users.registration.password=Passwort
 users.registration.submit=Registrieren
 users.service.KLUDGE= Flickschusterei
