--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -25,6 +25,9 @@ users.edit.save=Save changes
 users.edit.title=User Edit
 users.registration.title=User Registration
 users.registration.userdata=User Data
+users.registration.firstname=First Name
+users.registration.lastname=Last Name
+users.registration.username=User Name
 users.registration.password=Password
 users.registration.submit=Submit
 users.service.KLUDGE= Kludge
