Add Finance Items by Admin

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -18,6 +18,9 @@ rooms = Rooms
 materials = Materials
 
 finance.balance = Balance
+finance.additem.submit= Add Finance Item
+finance.addItem.financedata=Finance Data
+finance.addItem.title=Finance Title
 
 users.management = User Management
 users.title=User Overview
