--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -16,6 +16,9 @@ rooms = Räume
 materials = Materialien
 
 finance.balance = Bilanzen
+finance.additem.submit= Finanzen hinfügen
+finance.addItem.financedata=Finanzen Data
+finance.addItem.title=Finanzen Title
 
 users.management = Nutzerverwaltung
 users.title=Nutzerübersicht
