financen html file

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -17,8 +17,7 @@ materials = Materialien
 
 finance.balance = Bilanzen
 finance.additem.submit= Finanzen hinfügen
-finance.addItem.financedata=Finanzen Data
-finance.addItem.title=Finanzen Title
+finance.addItem.title=Finanzen Einfügen
 
 users.management = Nutzerverwaltung
 users.title=Nutzerübersicht
