fix entries template

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -91,3 +91,5 @@ orders.pickup.extra_costs.request = Please charge the customer {0}.
 orders.pickup.transaction = Transaction handled.
 orders.pickup.submit = Complete Order
 orders.receiving.unavailable = This service is currently unavailable.
+entries.beginning = Beginning
+entries.End = End
