template messages added

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -15,8 +15,6 @@ index.pleaselogin = Please log in to use the management software.
 
 rooms = Rooms
 
-materials = Materials
-
 finance.balance = Balance
 finance.additem.submit= Add Finance Item
 finance.addItem.financedata=Finance Data
@@ -93,3 +91,14 @@ orders.pickup.submit = Complete Order
 orders.receiving.unavailable = This service is currently unavailable.
 entries.beginning = Beginning
 entries.End = End
+
+materials = Materials
+materials.restock = Restock
+materials.consume = Consume
+materials.table.quantity = Quantity
+materials.table.name = Name
+
+orderItems = Order-Items
+orderItems.item = Item 
+orderItems.customer = Customer
+orderItems.id = Order-ID
