--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -13,8 +13,6 @@ index.pleaselogin = Bitte melden Sie sich an, um die Management-Software zu nutz
 
 rooms = Räume
 
-materials = Materialien
-
 finance.balance = Bilanzen
 finance.additem.submit= Finanzen hinfügen
 finance.addItem.title=Finanzen Einfügen
@@ -88,3 +86,14 @@ orders.pickup.extra_costs.request = Bitte kassieren Sie noch {0}EUR
 orders.pickup.transaction = Transaktion vorgenommen.
 orders.pickup.submit = Auftrag Abschließen
 orders.receiving.unavailable = Die Dienstleistung kann gerade nicht erbracht werden.
+
+materials = Materialien
+materials.restock = Nachbestellen
+materials.consume = Verbrauchen
+materials.table.quantity = Menge
+materials.table.name = Name
+
+orderItems = Bestellungsgegenstände
+orderItems.item = Gegenstand 
+orderItems.customer = Kunde
+orderItems.id = Order-ID
