--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -21,19 +21,20 @@ finance.addItem.financedata=Finance Data
 finance.addItem.title=Finance Title
 
 users.management = User Management
-users.title=User Overview
+users.title = User Overview
 users.remove=Remove
-users.edit=Edit
-users.edit.save=Save changes
-users.edit.title=User Edit
-users.registration.title=User Registration
-users.registration.userdata=User Data
-users.registration.firstname=First Name
-users.registration.lastname=Last Name
-users.registration.username=User Name
-users.registration.password=Password
-users.registration.submit=Submit
-users.service.KLUDGE= Kludge
+users.edit = Edit
+users.edit.save = Save changes
+users.edit.title = User Edit
+users.registration.title = User Registration
+users.registration.userdata = User Data
+users.registration.firstname = First Name
+users.registration.lastname = Last Name
+users.registration.username = User Name
+users.registration.password = Password
+users.registration.salary = Monthly Salary in €
+users.registration.submit = Submit
+users.service.KLUDGE = Kludge
 users.service.SEWING = Sewing
 users.service.LOCKSMITH = Locksmith
 users.service.CLEANING = Cleaning
