--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -18,19 +18,20 @@ finance.additem.submit= Finanzen hinfügen
 finance.addItem.title=Finanzen Einfügen
 
 users.management = Nutzerverwaltung
-users.title=Nutzerübersicht
+users.title = Nutzerübersicht
 users.remove=Entlassen
-users.edit=Bearbeiten
-users.edit.save=Änderungen speichern
-users.edit.title=Nuzerbearbeitung
-users.registration.title=Nutzerregistrierung
-users.registration.userdata=Nutzerdaten
-users.registration.firstname=Vorname
-users.registration.lastname=Nachname
-users.registration.username=Benutzername
-users.registration.password=Passwort
-users.registration.submit=Registrieren
-users.service.KLUDGE= Flickschusterei
+users.edit = Bearbeiten
+users.edit.save = Änderungen speichern
+users.edit.title = Nuzerbearbeitung
+users.registration.title = Nutzerregistrierung
+users.registration.userdata = Nutzerdaten
+users.registration.firstname = Vorname
+users.registration.lastname = Nachname
+users.registration.username = Benutzername
+users.registration.password = Passwort
+users.registration.salary = Monatliches Gehalt in €
+users.registration.submit = Registrieren
+users.service.KLUDGE = Flickschusterei
 users.service.SEWING = Nähservice
 users.service.LOCKSMITH = Schlüsseldienst
 users.service.CLEANING = Schnellreinigung
