fix checkbox position

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -19,7 +19,8 @@ finance.addItem.title=Finanzen Einfügen
 
 users.management = Nutzerverwaltung
 users.title = Nutzerübersicht
-users.remove=Entlassen
+users.remove = Entlassen
+users.remove.confirmation = Entlassen Bestätigen
 users.edit = Bearbeiten
 users.edit.save = Änderungen speichern
 users.edit.title = Nuzerbearbeitung
