--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -22,7 +22,8 @@ finance.addItem.title=Finance Title
 
 users.management = User Management
 users.title = User Overview
-users.remove=Remove
+users.remove = Remove
+users.remove.confirmation = Confirm Deletion
 users.edit = Edit
 users.edit.save = Save changes
 users.edit.title = User Edit
@@ -32,7 +33,7 @@ users.registration.firstname = First Name
 users.registration.lastname = Last Name
 users.registration.username = User Name
 users.registration.password = Password
-users.registration.salary = Monthly Salary in €
+users.registration.salary = Monthly Salary in â‚¬
 users.registration.submit = Submit
 users.service.KLUDGE = Kludge
 users.service.SEWING = Sewing
