Add error message when user name already exists

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -41,6 +41,7 @@ users.service.LOCKSMITH = Locksmith
 users.service.CLEANING = Cleaning
 users.service.ELECTRONICS = Electronics
 users.service.GRINDERY = Grindery
+RegistrationForm.username.duplicate = An account with this user name already exists.
 
 security.login = Login
 security.logout = Logout
