--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -38,6 +38,7 @@ users.service.LOCKSMITH = Schlüsseldienst
 users.service.CLEANING = Schnellreinigung
 users.service.ELECTRONICS = Elektrowerkstatt
 users.service.GRINDERY = Scherenschleiferei
+RegistrationForm.username.duplicate = Ein Account mit diesem Benutzernamen existiert bereits.
 
 security.login = Anmelden
 security.logout = Abmelden
