Update and rename cross_testing_report_for_gNN.adoc to cross_testing_report_for_g23.adoc

--- a/src/main/asciidoc/cross_testing_report_for_g23.adoc
+++ b/src/main/asciidoc/cross_testing_report_for_g23.adoc
@@ -1,7 +1,8 @@
 = Cross-Testing Feedback
 
-__Durchführende Gruppe:__
-__Anwendung von Gruppe:__
+__Durchführende Gruppe: 24__
+
+__Anwendung von Gruppe: 23__
 
 == Getestetes System
 Welche Aufgabe/Problemstellung löst die Anwendung.
