--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -89,6 +89,7 @@ orders.pickup.extra_costs.request = Bitte kassieren Sie noch {0}EUR
 orders.pickup.transaction = Transaktion vorgenommen.
 orders.pickup.submit = Auftrag Abschließen
 orders.receiving.unavailable = Die Dienstleistung kann gerade nicht erbracht werden.
+orders.pickup.returnWithoutPay = Gratisrückgabe
 
 materials = Materialien
 materials.restock = Nachbestellen
