cancelling/giving back order without pay added

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -92,7 +92,10 @@ orders.pickup.extra_costs.request = Please charge the customer {0}.
 orders.pickup.transaction = Transaction handled.
 orders.pickup.submit = Complete Order
 orders.pickup.returnWithoutPay = Return for free
+orders.pickup.beforeFinished = Give back unfinished
+orders.actions = Actions
 orders.receiving.unavailable = This service is currently unavailable.
+
 entries.beginning = Beginning
 entries.End = End
 
