--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -90,6 +90,8 @@ orders.pickup.transaction = Transaktion vorgenommen.
 orders.pickup.submit = Auftrag Abschließen
 orders.receiving.unavailable = Die Dienstleistung kann gerade nicht erbracht werden.
 orders.pickup.returnWithoutPay = Gratisrückgabe
+orders.pickup.beforeFinished = Unbearbeitet zurückgeben
+orders.actions = Actions
 
 materials = Materialien
 materials.restock = Nachbestellen
