checkbox for free pickuo/ canceled order added

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -93,6 +93,7 @@ orders.pickup.transaction = Transaction handled.
 orders.pickup.submit = Complete Order
 orders.pickup.returnWithoutPay = Return for free
 orders.pickup.beforeFinished = Give back unfinished
+orders.pickup.sure = Sure?
 orders.actions = Actions
 orders.receiving.unavailable = This service is currently unavailable.
 
