--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -91,6 +91,7 @@ orders.pickup.submit = Auftrag Abschließen
 orders.receiving.unavailable = Die Dienstleistung kann gerade nicht erbracht werden.
 orders.pickup.returnWithoutPay = Gratisrückgabe
 orders.pickup.beforeFinished = Unbearbeitet zurückgeben
+orders.pickup.sure = Sicher?
 orders.actions = Actions
 
 materials = Materialien
