--- a/src/main/asciidoc/protocols/2019.12.13.adoc
+++ b/src/main/asciidoc/protocols/2019.12.13.adoc
@@ -7,10 +7,10 @@ Beginn:   15:00 Uhr +
 Ende:     16:05 Uhr
 
 __Schriftführer:__
-Kien Dang Tran
+Viktor Reusch
 
 *Nächstes Treffen:* +
-03.12.2019, 16:40 Uhr APB/E065
+20.12.2019, 16:40 Uhr APB/E065
 
 _Teilnehmer_:
 
